# yarp

./: .appveyor.yml  .clang-format  .clang-tidy  .coveralls.yml  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  COPYRIGHT  CTestConfig.cmake  ChangeLog  Doxyfile  Doxyfile.min  Doxyfile.part  LGPL.TXT  LICENSE  MIRRORING  Makefile  NEWS  QUICKSTART-DEBIAN.TXT  QUICKSTART-WIN-VS6.TXT  README  README.md  a.txt  appveyor.yml  autogen.sh  bootstrap.sh  configure.ac  dataDumper.xml  desktop.ini
Mattia2/: CMakeLists.txt  PumaKinematics.cpp  PumaKinematics.h
Mattia2/PumaKinLib/: CMakeLists.txt  PumaKin.cpp  PumaKin.h
bindings/: CMakeLists.txt  IVector_fromTo_matlab.i  README  README.md  driver_qos.lua  example.lisp  example.lua  example.m  example.py  example.scm  example2.lua  example2.pl  example_enc.py  example_img.m  example_img.py  macrosForMultipleAnalogSensors.i  std_string_csharp.i  std_string_java.i  std_string_lua.i  swig-allegro-and-chicken-fix.patch  things.i  yarp.i
bindings/allegro/: CMakeLists.txt  compat.h
bindings/brainfuck/: CMakeLists.txt
bindings/chicken/: CMakeLists.txt
bindings/csharp/: CMakeLists.txt
bindings/java/: CMakeLists.txt
bindings/lua/: CMakeLists.txt  argcargv.i
bindings/matlab/: IVector_fromTo_matlab.i  vectors_fromTo_matlab.i
bindings/octave/: CMakeLists.txt
bindings/perl/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/ruby/: CMakeLists.txt
bindings/src/: Example1.java  Example2.java  Example4.java  LoadYarp.java  YarpImageHelper.java
bindings/tcl/: CMakeLists.txt
cmake/: CMakeLists.txt  CMakeRC.cmake  FindGraphviz.cmake  FindI2C.cmake  FindSOXR.cmake  FindUDev.cmake  FindZFP.cmake  GetAllCMakeProperties.cmake  MacOSXFrameworkInfo.plist.in  StandardFindModule.cmake  YARPUninstall.cmake  YarpBackupVariable.cmake  YarpBindingsSource.cmake  YarpCatchUtils.cmake  YarpChooseIDL.cmake  YarpDeprecatedOption.cmake  YarpDeprecatedWarning.cmake  YarpDescribe.cmake  YarpDeviceParamsGenerator.cmake  YarpDeviceParamsParserGenerator.cmake  YarpDoc.cmake  YarpFindDependencies.cmake  YarpIDL.cmake  YarpInstallBasicPackageFiles.cmake  YarpInstallationHelpers.cmake  YarpMacOSUtilities.cmake  YarpOSXUtilities.cmake  YarpOptions.cmake  YarpPackage.cmake  YarpPlugin.cmake  YarpPrintFeature.cmake  YarpRemoveFile.cmake  YarpRenamedOption.cmake  YarpSourceGroup.cmake  YarpSystemCheck.cmake  YarpUseQt5.cmake  YarpVersion.cmake  full-options.cmake  manual.tex
cmake/template/: Doxyfile.in  ExternalModules.cmake.template  TestConfig.cmake  YARPConfig.cmake.in  YARPTargetsStatic.cmake.in  YarpTweakIDL.cmake.in  cmake_uninstall.cmake.in  control.in  placeGeneratedYarpIdlFiles.cmake.in  yarp_conf_api.h.in  yarp_conf_compiler.h.in  yarp_conf_numeric.h.in  yarp_conf_options.h.in  yarp_conf_system.h.in  yarp_conf_version.h.in  yarp_plugin_RFModule.cpp.in  yarp_plugin_carrier.cpp.in  yarp_plugin_device.cpp.in  yarp_plugin_library.cpp.in  yarp_plugin_portmonitor.cpp.in  yarp_plugin_yarpdev_main.cpp.in
conf/: AddInstallRPATHSupport.cmake  CMakeLists.txt  DEVICEConfig.cmake.in  Doxyfile  Doxyfile.man  Doxyfile.min  Doxyfile.pagenum  Doxyfile.part  Doxyfile.test  ExternalModules.cmake.template  ExtractVersion.cmake  FindACE.cmake  FindAce.cmake  FindAtlas.cmake  FindBoost.cmake  FindFFMPEG.cmake  FindFTDI.cmake  FindFreenect.cmake  FindFuse.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGSL.cmake  FindGooCanvas.cmake  FindGooCanvasMM.cmake  FindGthread.cmake  FindGtkDatabox.cmake  FindGtkDataboxMM.cmake  FindGtkMM.cmake  FindGtkMMUnix.cmake  FindGtkMMWin32.cmake  FindGtkPlus.cmake  FindGtkWin32.cmake  FindGtkmmWin32.cmake  FindJPEG.cmake  FindLibOVR.cmake  FindLibUsb1.cmake  FindLibdc1394.cmake  FindLibedit.cmake  FindNVIDIACg.cmake  FindOctave.cmake  (+77 more)
conf/debian/: README  README.Yarp  changelog  control  copyright  docs  libyarp2-dev.install  yarp-bin.install
conf/deprecated/: FindGthread.cmake  FindGtkMM.cmake  FindGtkMMUnix.cmake  FindGtkMMWin32.cmake  FindGtkPlus.cmake  FindGtkWin32.cmake  MacroExtractVersion.cmake  MacroStandardFindModule.cmake
conf/doxygen/: Doxyfile  Doxyfile.man  Doxyfile.min  Doxyfile.part  Doxyfile.part.template
conf/template/: DEVICEConfig.cmake.in  Doxyfile.in  TestConfig.cmake  YARPConfig.cmake.in  YARPConfigVersion.cmake.in  YarpPluginConfFile.cmake.in  YarpPluginPath.cmake  YarpTweakIDL.cmake.in  placeGeneratedThriftFiles.cmake.in  placeGeneratedYarpIdlFiles.cmake.in  yarp_config_api.h.in  yarp_config_compiler.dox.in  yarp_config_numeric.h.in  yarp_config_options.h.in  yarp_config_system.h.in  yarp_config_version.h.in  yarp_plugin_carrier.cpp.in  yarp_plugin_device.cpp.in  yarp_plugin_lib.cpp.in  yarp_plugin_lib.h.in  yarp_plugin_library.cpp.in  yarp_plugin_portmonitor.cpp.in  yarp_stub_carrier.cpp.in  yarp_stub_device.cpp.in  yarpdev_compat_plugin.cmake  yarpdev_compat_plugin.h  yarpdev_helper.cpp.in  yarpdev_import.h.in  yarpdev_lib.cpp.in  yarpdev_lib.h.in  yarpdev_lib_main.cpp.in
data/: CMakeLists.txt
doc/: 070_yarp_logging.dox  090_tutorials.dox  091_robottestingframework_plugins.md  CMakeLists.txt  Doxyfile.in  Makefile  add_a_device.dox  add_a_plugin.dox  audio_doc.dox  carrier_config.dox  carrier_config_mpi.dox  carrier_expert.dox  carrier_h264_howto.dox  changes.dox  check_your_installation.dox  cmd_yarp-config.dox  cmd_yarp.dox  cmd_yarpbatterygui.dox  cmd_yarpdatadumper.dox  cmd_yarpdatadumperAppGenerator.dox  cmd_yarpdataplayer.dox  cmd_yarpdev.dox  cmd_yarphear.dox  cmd_yarpidl_rosmsg.dox  cmd_yarpidl_thrift.dox  cmd_yarplaserscannergui.dox  cmd_yarplogger-console.dox  cmd_yarplogger.dox  cmd_yarpmanager-console.dox  cmd_yarpmanager.dox  cmd_yarpmanagerpp.dox  cmd_yarpmobilebasegui.dox  cmd_yarpmotorgui.dox  cmd_yarprobotinterface.dox  cmd_yarpros.dox  cmd_yarprun.dox  cmd_yarpscope.dox  cmd_yarpserver.dox  cmd_yarpview.dox  cmd_yarpviz.dox  (+121 more)
example/: CMakeLists.txt  README.TXT  main.cpp
src/: CMakeLists - Copy.txt  CMakeLists.txt  Makefile  Makefile.am
tests/: .clang-tidy  CMakeLists.txt  YarpBuildLocation.h.in  harness.cpp  harness.h  harness_devices.cpp
(+11888 files in other folders)
